--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+    <style>
+        body{
+            text-align: center;
+        }
+        div{
+            margin-top: 250px;
+            font-size: 30px;
+        }
+    </style>
+
 </head>
 <body>
-    <h1>Hello</h1> 
-    <script src="app.js"></script>
+    <div>
+    <h1>Hello <script src="app.js"></script> can you click me please </h1>
+</div>
 </body>
 </html>
